Clear cache endpoint
